src/styles/globals.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  height: 100%;
  /* max-width: 100vw; */
  /* overflow-x: hidden; */
}

a {
  color: inherit;
  text-decoration: none;
}

#__next {
  height: 100%;
}

.height-100 {
  height: 100%;
}

.iframe-cont {
  width: 100%;
  height: 100%;
  /* overflow: hidden; */
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

